fotos y cremas y prodcutos

--- a/vista/tienda.html
+++ b/vista/tienda.html
@@ -143,8 +143,8 @@
         </div>
     </div>
     <div class="boton-contenedor1">
-        <a href="verMasProductosCremas.php">
-            <button class="boton1">Ver más productos</button>
+        <a href="tiendaVerMasCremas.html">
+            <button class="boton1">Ver más cremas</button>
         </a>
     </div>
 
@@ -174,7 +174,7 @@
         </div>
     </div>
     <div class="boton-contenedor1">
-        <a href="verMasProductos.php">
+        <a href="tiendaVerMasProductos.html">
             <button class="boton1">Ver más productos</button>
         </a>
     </div>
