--- a/vista/tienda.html
+++ b/vista/tienda.html
@@ -76,7 +76,7 @@
         }
 
         .texto .precio {
-            font-weight: bold;
+            font-weight: 700;
         }
 
         .boton-contenedor1 {
