cosas de carrito

--- a/vista/tienda.html
+++ b/vista/tienda.html
@@ -134,7 +134,7 @@
             </div>
         </div>
         <div class="item">
-            <a href="producto.php?id=3">
+            <a href="../vista/producto.php?id=3">
                 <img src="../controlador/images/UreadinPodosCrema.png" alt="Crema 3">
             </a>
             <div class="texto">
@@ -144,7 +144,7 @@
         </div>
     </div>
     <div class="boton-contenedor1">
-        <a href="tiendaVerMasCremas.php">
+        <a href="../vista/tiendaVerMasCremas.php">
             <button class="boton1">Ver más cremas</button>
         </a>
     </div>
@@ -180,7 +180,7 @@
         </div>
     </div>
     <div class="boton-contenedor1">
-        <a href="tiendaVerMasProductos.php">
+        <a href="../vista/tiendaVerMasProductos.php">
             <button class="boton1">Ver más productos</button>
         </a>
     </div>
