--- a/vista/contactanos.html
+++ b/vista/contactanos.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -9,14 +8,21 @@
     <link href="https://fonts.googleapis.com/css2?family=Alverta:wght@600;700;900&display=swap" rel="stylesheet">
 
     <style>
-   
-   .columnac {
+        body {
+            display: flex;
+            justify-content: space-between;
+            font-family: 'Alverta', sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+
+        .columnac {
             display: flex;
             flex-direction: column;
             align-items: flex-start;
             margin-left: 50px;
             margin-bottom: 150px;
-            margin-top: 20px
+            margin-top: 20px;
         }
 
         /* Títulos principales */
@@ -25,7 +31,6 @@
             font-size: 32px;
             font-weight: 700;
             margin-bottom: 10px;
-
         }
 
         /* Texto secundario  */
@@ -43,34 +48,81 @@
             text-decoration: underline;
         }
 
-</style>
+        .map-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin-right: 200px;
+            margin-top: 20px;
+        }
+
+        .map-wrapper {
+            width: 600px;
+            height: 400px;
+            margin-bottom: 20px;
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            overflow: hidden;
+            position: relative;
+            cursor: pointer;
+        }
+
+        .map-wrapper iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
+        }
+    </style>
 </head>
 <body>
+    <!-- Columna de Información -->
+    <div class="columnac">
+        <h3>Direcciones</h3>
+        <p>Calle Pozodulce 43, Arahal, Sevilla</p>
+        <p>Calle San Juan Bosco, 23 Local 3, Utrera, Sevilla</p>
+        <br>
+        <h3>Email</h3>
+        <p>cliclicarayo@gmail.com</p>
+        <h3>Horario</h3>
+        <p>
+            Depende de intervenciones, <br>
+            contactar por teléfono para<br>
+            más información de horarios.
+        </p>          
+        <br>
+        <h3>Teléfono</h3>  
+        <p>Tel: 954841159 (llamadas)</p>
+        <p>Tel: 644248375 (whatsapp)</p>
+        <br>
+        <h3>Redes Sociales</h3> 
+        <p>Instagram: clinicarayo</p>
+        <br>
+    </div>
 
-<div class="columnac">
-                <br>
-                <h3>Direcciones</h3>
-                <p>Calle Pozodulce 43, Arahal, Sevilla</p>
-                <p>Calle San Juan Bosco, 23 Local 3, Utrera, Sevilla</p>
-                <br>
-                <h3>Email</h3>
-                <p>cliclicarayo@gmail.com</p>
-                <h3>Horario</h3>
-                <p>
-                Depende de intervenciones, <br>
-                contactar por teléfono para<br>
-                más información de horarios.
-               </p>          
-                <br>
-                <h3>Teléfono</h3>  
-                <p>Tel: 954841159 (llamadas)</p>
-                <p>Tel: 644248375 (whatsapp)</p>
-                <br>
-                <h3>Redes Sociales</h3> 
-                <p>Instagram: clinicarayo</p>
-                <br>
+    <!-- Contenedor de Mapas -->
+    <div class="map-container">
+        <!-- Primer mapa (Arahal) -->
+        <div class="map-wrapper" onclick="window.open('https://maps.app.goo.gl/2fJ4JBh9SWquCkZP8', '_blank')">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3162.832558218813!2d-5.545151784679287!3d37.26372347985445!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd126d15a31e06f3%3A0xdb156b72d5cdcc24!2sCalle%20Pozodulce%2C%2043%2C%2041620%20Arahal%2C%20Sevilla!5e0!3m2!1ses!2ses!4v1691050458071!5m2!1ses!2ses"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
+        </div>
 
-            </div>
-</div>
+        <!-- Segundo mapa (Utrera) -->
+        <div class="map-wrapper" onclick="window.open('https://maps.app.goo.gl/PcMbz3HnZMHGTDnJ8', '_blank')">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3161.917399604282!2d-5.78066248467916!3d37.18188287985992!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd126e2db8a1db3b%3A0xf9166d3e9d846469!2sCalle%20San%20Juan%20Bosco%2C%2023%2C%2041720%20Utrera%2C%20Sevilla!5e0!3m2!1ses!2ses!4v1691050544389!5m2!1ses!2ses"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
+        </div>
+    </div>
 </body>
 </html>
