ya va lo de producto

--- a/vista/menuUsuarioNoRegistrado.html
+++ b/vista/menuUsuarioNoRegistrado.html
@@ -192,7 +192,7 @@
                             <li><a href="cirugiaCerrada.php">Cirugía Cerrada</a></li>
                         </ul>
                     </td>
-                    <td><a href="tienda.php">Tienda</a></td>
+                    <td><a href="../vista/tienda.php">Tienda</a></td>
                     <td><a href="reservarCita.php">Reservar cita</a></td>
                     <td><a href="blog.php">Blog</a></td>
                     <td><a href="contactanos.php">Contáctanos</a></td>
