--- a/vista/tienda.html
+++ b/vista/tienda.html
@@ -112,7 +112,7 @@
 
         <!-- Icono del carrito -->
         <div class="carrito-contenedor">
-            <a href="carrito.php">
+            <a href="../controlador/carrito.php">
                 <img src="../controlador/images/carrito.png" alt="Carrito de Compras">
             </a>
         </div>
